--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,22 @@ h1 {
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
   z-index: 2;
 }
+.main .alert {
+  width: 100%;
+  height: auto;
+  opacity: 1;
+  background-color: var(--pink);
+  padding: 1rem;
+  margin: 1rem auto;
+  border-radius: 0.3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  transition: all 0.3s linear;
+}
+.main .alert .fa-square-xmark {
+  font-size: 1.5rem;
+}
+.main .alert .fa-square-xmark:hover {
+  color: var(--dark);
+}
