--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,53 @@ h1 {
   margin: 10% auto;
 }
 
+.main .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btn-group {
+  box-shadow: 0 4px 9px -4px rgba(0,0,0,35);
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #3b71ca;
+  box-shadow: 0 4x 9px -4px #3b71ca;
+}
+.btn {
+  text-transform: uppercase;
+  vertical-align: bottom;
+  font-weight: 400;
+  line-height: 1.5;
+  border: 0;
+  box-shadow: 0 4px 9px -4px rgba(0,0,0,35);
+  font-size: 1rem;
+  padding: .625rem 1.5rem .5rem;
+  transition: all .15s ease-in-out;
+
+ 
+}
+.btn-primary:hover {
+color: var(--dark);
+background-color: #28549a;
+
+}
+.btn:first-child {
+  border-top-left-radius: .25rem;
+  border-bottom-left-radius: .25rem;
+
+}
+.btn:last-child {
+  border-top-right-radius: .25rem;
+  border-bottom-right-radius: .25rem;
+  
+}
+
 .main .container {
   overflow-x: auto; /*para que haya barra scroll si se necesita*/
 }
